...
                HomeView(
                    selectedTab: $selectedTab,
                    timerManager: timerManager,
                    dataManager: dataManager)
            }
            .tabItem {
                Label("Home", systemImage: "timer")
            }
            .tag(AppTab.home)
            
            NavigationStack {
                ChartView(dataManager: dataManager)
            }
...
            }
            
            NavigationStack {
                TaskHistoryView(dataManager: dataManager)
            }
            .tabItem {
                Label("History", systemImage: "tray.and.arrow.up.fill")
            }
            .tag(AppTab.history)
            
            // PROFILE TAB
            NavigationStack {
                AnalyticsDashboardView(tasks: dataManager.tasks)
...
